--- a/my-project/frontend/package.json
+++ b/my-project/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-project",
   "version": "0.1.0",
-  "homepage": "https://ryougiguda.github.io/law_db",
+  "homepage": "https://ryougiguda.github.io/law_db/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^9.3.1",
